# SIMDNGINE

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: Simd.hpp  simd.hpp
src/: MMXMmintrin.cpp  Main.cpp  SSE2Emmintrin.cpp  SSE3Pmmintrin.cpp  SSE41Smmintrin.cpp  SSEXmmintrin.cpp  SSSE3Tmmintrin.cpp  main.cpp
